// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Component should handle readOnly, disabled: active 1`] = `
<input
  aria-invalid="false"
  class="pf-c-form-control curiosity-text-input "
  id="generatedid-"
  name="generatedid-"
  type="text"
  value=""
/>
`;

exports[`TextInput Component should handle readOnly, disabled: disabled 1`] = `
<input
  aria-invalid="false"
  class="pf-c-form-control curiosity-text-input "
  disabled=""
  id="generatedid-"
  name="generatedid-"
  type="text"
  value=""
/>
`;

exports[`TextInput Component should handle readOnly, disabled: readOnly 1`] = `
<input
  aria-invalid="false"
  class="pf-c-form-control curiosity-text-input "
  id="generatedid-"
  name="generatedid-"
  readonly=""
  type="text"
  value=""
/>
`;

exports[`TextInput Component should render a basic component: basic component 1`] = `
<input
  aria-invalid="false"
  class="pf-c-form-control curiosity-text-input "
  id="generatedid-"
  name="generatedid-"
  type="text"
  value=""
/>
`;

exports[`TextInput Component should return an emulated onChange event: emulated event, change 1`] = `
Object {
  "checked": undefined,
  "currentTarget": Object {
    "value": "dolor sit",
  },
  "id": undefined,
  "keyCode": undefined,
  "name": undefined,
  "persist": [Function],
  "target": Object {},
  "value": "dolor sit",
}
`;

exports[`TextInput Component should return an emulated onClear event on escape with type search: emulated event, esc, type search 1`] = `
Object {
  "checked": undefined,
  "currentTarget": Object {
    "value": "",
  },
  "id": undefined,
  "keyCode": 27,
  "name": undefined,
  "persist": [Function],
  "target": Object {},
  "value": "",
}
`;

exports[`TextInput Component should return an emulated onClear event on escape: emulated event, esc 1`] = `
Object {
  "checked": undefined,
  "currentTarget": Object {
    "value": "",
  },
  "id": undefined,
  "keyCode": 27,
  "name": undefined,
  "persist": [Function],
  "target": Object {},
  "value": "",
}
`;

exports[`TextInput Component should return an emulated onClear event on search clear: emulated event, clear 1`] = `
Object {
  "checked": undefined,
  "currentTarget": Object {
    "value": "",
  },
  "id": undefined,
  "keyCode": undefined,
  "name": undefined,
  "persist": [Function],
  "target": Object {},
  "value": "",
}
`;
